2005-07-01  Michal Nazarewicz  <m86@o2.pl>

	* FvwmTransFocus.c: NewFiley
	* README, TODO: FvwmTransFocus added

	* cdiff.sed, cdiff.c: New file
	* timer.c: New file
	* README, TODO: cdiff and timer added

2005-06-30  Michal Nazarewicz  <m86@o2.pl>

	* load.c: New file
	* README, TODO: load added

	* the-book-of-mozilla.txt, quotes.txt: New file
	* README: the-book-of-mozilla.txt and quotes.txt added

	* malloc.c: Displays size after error

	* tuptime.c: Don't die if buptime have only 2 numbers

	* README, malloc.c: New file
	* TODO: malloc added

2005-06-29  Michal Nazarewicz  <m86@o2.pl>

	* LICENSE, LICENSE.AFL, TODO, tuptime.c: New file.